core/src/main/resources/output/AstcParser.java
// $ANTLR 3.5 C:\\overture\\astCreator-github\\astCreator\\src\\main\\resources\\Astc.g 2013-09-06 20:14:17

package com.lausdahl.ast.creator.parser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.debug.*;
import java.io.IOException;
import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class AstcParser extends DebugParser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASPECT_DCL", "ASSIGN", "AST", 
		"COLON", "COMMENT", "ESC_SEQ", "FIELD_DCL", "ID", "JAVANAME", "NormalChar", 
		"PACKAGES", "QUOTE", "SUBTYPE", "SpecialChar", "TOKENS", "WS", "'#'", 
		"'%'", "'&&'", "'('", "')'", "'*'", "'**'", "'+'", "';'", "'?'", "'['", 
		"']'", "'analysis'", "'base'", "'{'", "'|'", "'||'", "'}'"
	};
	public static final int EOF=-1;
	public static final int T__20=20;
	public static final int T__21=21;
	public static final int T__22=22;
	public static final int T__23=23;
	public static final int T__24=24;
	public static final int T__25=25;
	public static final int T__26=26;
	public static final int T__27=27;
	public static final int T__28=28;
	public static final int T__29=29;
	public static final int T__30=30;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int T__34=34;
	public static final int T__35=35;
	public static final int T__36=36;
	public static final int T__37=37;
	public static final int ASPECT_DCL=4;
	public static final int ASSIGN=5;
	public static final int AST=6;
	public static final int COLON=7;
	public static final int COMMENT=8;
	public static final int ESC_SEQ=9;
	public static final int FIELD_DCL=10;
	public static final int ID=11;
	public static final int JAVANAME=12;
	public static final int NormalChar=13;
	public static final int PACKAGES=14;
	public static final int QUOTE=15;
	public static final int SUBTYPE=16;
	public static final int SpecialChar=17;
	public static final int TOKENS=18;
	public static final int WS=19;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public static final String[] ruleNames = new String[] {
		"invalidRule", "aspectdcla", "name", "pkg", "definitions", "token", "alternative", 
		"production", "toks", "aspectdcl", "productionfields", "repeat", "aspectName", 
		"stringLiteral", "extends", "dd", "root", "ast", "productionfield"
	};

	public static final boolean[] decisionCanBacktrack = new boolean[] {
		false, // invalid decision
		false, false, false, false, false, false, false, false, false, false, 
		    false, false, false, false, false, false, false, false, false, false
	};

 
	public int ruleLevel = 0;
	public int getRuleLevel() { return ruleLevel; }
	public void incRuleLevel() { ruleLevel++; }
	public void decRuleLevel() { ruleLevel--; }
	public AstcParser(TokenStream input) {
		this(input, DebugEventSocketProxy.DEFAULT_DEBUGGER_PORT, new RecognizerSharedState());
	}
	public AstcParser(TokenStream input, int port, RecognizerSharedState state) {
		super(input, state);
		DebugEventSocketProxy proxy =
			new DebugEventSocketProxy(this,port,adaptor);
		setDebugListener(proxy);
		setTokenStream(new DebugTokenStream(input,proxy));
		try {
			proxy.handshake();
		}
		catch (IOException ioe) {
			reportError(ioe);
		}
		TreeAdaptor adap = new CommonTreeAdaptor();
		setTreeAdaptor(adap);
		proxy.setTreeAdaptor(adap);
	}

	public AstcParser(TokenStream input, DebugEventListener dbg) {
		super(input, dbg);
		 
		TreeAdaptor adap = new CommonTreeAdaptor();
		setTreeAdaptor(adap);

	}

	protected boolean evalPredicate(boolean result, String predicate) {
		dbg.semanticPredicate(result, predicate);
		return result;
	}

		protected DebugTreeAdaptor adaptor;
		public void setTreeAdaptor(TreeAdaptor adaptor) {
			this.adaptor = new DebugTreeAdaptor(dbg,adaptor);
		}
		public TreeAdaptor getTreeAdaptor() {
			return adaptor;
		}
	@Override public String[] getTokenNames() { return AstcParser.tokenNames; }
	@Override public String getGrammarFileName() { return "C:\\overture\\astCreator-github\\astCreator\\src\\main\\resources\\Astc.g"; }


	    private boolean mMessageCollectionEnabled = false;
	    private boolean mHasErrors = false;
	    private List<String> mMessages;
	    private List<RecognitionException> mExceptions = new ArrayList<RecognitionException>();

	    public boolean hasExceptions()
	    {
	        return mExceptions.size() > 0;
	    }

	    public List<RecognitionException> getExceptions()
	    {
	        return mExceptions;
	    }

	    public String getErrorMessage(RecognitionException e, String[] tokenNames)
	    {
	        String msg = super.getErrorMessage(e, tokenNames);
	        mExceptions.add(e);
	        return msg;
	    }

	    /**
	     *  Switches error message collection on or of.
	     *
	     *  The standard destination for parser error messages is <code>System.err</code>.
	     *  However, if <code>true</code> gets passed to this method this default
	     *  behaviour will be switched off and all error messages will be collected
	     *  instead of written to anywhere.
	     *
	     *  The default value is <code>false</code>.
	     *
	     *  @param pNewState  <code>true</code> if error messages should be collected.
	     */
	    public void enableErrorMessageCollection(boolean pNewState) {
	        mMessageCollectionEnabled = pNewState;
	        if (mMessages == null && mMessageCollectionEnabled) {
	            mMessages = new ArrayList<String>();
	        }
	    }
	    
	    /**
	     *  Collects an error message or passes the error message to <code>
	     *  super.emitErrorMessage(...)</code>.
	     *
	     *  The actual behaviour depends on whether collecting error messages
	     *  has been enabled or not.
	     *
	     *  @param pMessage  The error message.
	     */
	     @Override
	    public void emitErrorMessage(String pMessage) {
	        mHasErrors=true;
	        if (mMessageCollectionEnabled) {
	            mMessages.add(pMessage);
	        } else {
	            super.emitErrorMessage(pMessage);
	        }
	    }
	    
	    /**
	     *  Returns collected error messages.
	     *
	     *  @return  A list holding collected error messages or <code>null</code> if
	     *           collecting error messages hasn't been enabled. Of course, this
	     *           list may be empty if no error message has been emited.
	     */
	    public List<String> getMessages() {
	        return mMessages;
	    }
	    
	    /**
	     *  Tells if parsing a Java source has caused any error messages.
	     *
	     *  @return  <code>true</code> if parsing a Java source has caused at least one error message.
	     */
	    public boolean hasErrors() {
	        return mHasErrors;
	    }


	public static class extends_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "extends"
	// C:\\overture\\astCreator-github\\astCreator\\src\\main\\resources\\Astc.g:211:1: extends : SUBTYPE ID ;
	public final AstcParser.extends_return extends() throws  {
		AstcParser.extends_return retval = new AstcParser.extends_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token SUBTYPE1=null;
		Token ID2=null;

		Object SUBTYPE1_tree=null;
		Object ID2_tree=null;

		try { dbg.enterRule(getGrammarFileName(), "extends");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(211, 0);

		try {
			// C:\\overture\\astCreator-github\\astCreator\\src\\main\\resources\\Astc.g:212:2: ( SUBTYPE ID )
			dbg.enterAlt(1);

			// C:\\overture\\astCreator-github\\astCreator\\src\\main\\resources\\Astc.g:212:4: SUBTYPE ID
			{
			root_0 = (Object)adaptor.nil();


			dbg.location(212,4);
			SUBTYPE1=(Token)match(input,SUBTYPE,FOLLOW_SUBTYPE_in_extends311); 
			SUBTYPE1_tree = (Object)adaptor.create(SUBTYPE1);
			adaptor.addChild(root_0, SUBTYPE1_tree);
			dbg.location(212,12);
			ID2=(Token)match(input,ID,FOLLOW_ID_in_extends313); 
			ID2_tree = (Object)adaptor.create(ID2);
			adaptor.addChild(root_0, ID2_tree);

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(213, 1);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "extends");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "extends"


	public static class root_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "root"
	// C:\\overture\\astCreator-github\\astCreator\\src\\main\\resources\\Astc.g:233:1: root : pkg toks ast aspectdcl ;
	public final AstcParser.root_return root() throws  {
		AstcParser.root_return retval = new AstcParser.root_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope pkg3 =null;
		ParserRuleReturnScope toks4 =null;
		ParserRuleReturnScope ast5 =null;
		ParserRuleReturnScope aspectdcl6 =null;


		try { dbg.enterRule(getGrammarFileName(), "root");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(233, 0);

		try {
			// C:\\overture\\astCreator-github\\astCreator\\src\\main\\resources\\Astc.g:234:3: ( pkg toks ast aspectdcl )
			dbg.enterAlt(1);

			// C:\\overture\\astCreator-github\\astCreator\\src\\main\\resources\\Astc.g:234:5: pkg toks ast aspectdcl
			{
			root_0 = (Object)adaptor.nil();


			dbg.location(234,5);
			pushFollow(FOLLOW_pkg_in_root443);
			pkg3=pkg();
			state._fsp--;

			adaptor.addChild(root_0, pkg3.getTree());
			dbg.location(234,9);
			pushFollow(FOLLOW_toks_in_root445);
			toks4=toks();
			state._fsp--;

			adaptor.addChild(root_0, toks4.getTree());
			dbg.location(234,14);
			pushFollow(FOLLOW_ast_in_root447);
			ast5=ast();
			state._fsp--;

			adaptor.addChild(root_0, ast5.getTree());
			dbg.location(234,18);
			pushFollow(FOLLOW_aspectdcl_in_root449);
			aspectdcl6=aspectdcl();
			state._fsp--;

			adaptor.addChild(root_0, aspectdcl6.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(235, 2);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "root");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "root"


	public static class pkg_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "pkg"
	// C:\\overture\\astCreator-github\\astCreator\\src\\main\\resources\\Astc.g:237:1: pkg : PACKAGES ^ ( 'base' JAVANAME ';' !)? ( 'analysis' JAVANAME ';' !)? ;
	public final AstcParser.pkg_return pkg() throws  {
		AstcParser.pkg_return retval = new AstcParser.pkg_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token PACKAGES7=null;
		Token string_literal8=null;
		Token JAVANAME9=null;
		Token char_literal10=null;
		Token string_literal11=null;
		Token JAVANAME12=null;
		Token char_literal13=null;

		Object PACKAGES7_tree=null;
		Object string_literal8_tree=null;
		Object JAVANAME9_tree=null;
		Object char_literal10_tree=null;
		Object string_literal11_tree=null;
		Object JAVANAME12_tree=null;
		Object char_literal13_tree=null;

		try { dbg.enterRule(getGrammarFileName(), "pkg");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(237, 0);

		try {
			// C:\\overture\\astCreator-github\\astCreator\\src\\main\\resources\\Astc.g:238:3: ( PACKAGES ^ ( 'base' JAVANAME ';' !)? ( 'analysis' JAVANAME ';' !)? )
			dbg.enterAlt(1);

			// C:\\overture\\astCreator-github\\astCreator\\src\\main\\resources\\Astc.g:238:5: PACKAGES ^ ( 'base' JAVANAME ';' !)? ( 'analysis' JAVANAME ';' !)?
			{
			root_0 = (Object)adaptor.nil();


			dbg.location(238,13);
			PACKAGES7=(Token)match(input,PACKAGES,FOLLOW_PACKAGES_in_pkg467); 
			PACKAGES7_tree = (Object)adaptor.create(PACKAGES7);
			root_0 = (Object)adaptor.becomeRoot(PACKAGES7_tree, root_0);
			dbg.location(238,15);
			// C:\\overture\\astCreator-github\\astCreator\\src\\main\\resources\\Astc.g:238:15: ( 'base' JAVANAME ';' !)?
			int alt1=2;
			try { dbg.enterSubRule(1);
			try { dbg.enterDecision(1, decisionCanBacktrack[1]);

			int LA1_0 = input.LA(1);
			if ( (LA1_0==33) ) {
				alt1=1;
			}
			} finally {dbg.exitDecision(1);}

			switch (alt1) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\overture\\astCreator-github\\astCreator\\src\\main\\resources\\Astc.g:238:16: 'base' JAVANAME ';' !
					{
					dbg.location(238,16);
					string_literal8=(Token)match(input,33,FOLLOW_33_in_pkg471); 
					string_literal8_tree = (Object)adaptor.create(string_literal8);
					adaptor.addChild(root_0, string_literal8_tree);
					dbg.location(238,23);
					JAVANAME9=(Token)match(input,JAVANAME,FOLLOW_JAVANAME_in_pkg473); 
					JAVANAME9_tree = (Object)adaptor.create(JAVANAME9);
					adaptor.addChild(root_0, JAVANAME9_tree);
					dbg.location(238,35);
					char_literal10=(Token)match(input,28,FOLLOW_28_in_pkg475); 
					}
					break;

			}
			} finally {dbg.exitSubRule(1);}
			dbg.location(238,40);
			// C:\\overture\\astCreator-github\\astCreator\\src\\main\\resources\\Astc.g:238:40: ( 'analysis' JAVANAME ';' !)?
			int alt2=2;
			try { dbg.enterSubRule(2);
			try { dbg.enterDecision(2, decisionCanBacktrack[2]);

			int LA2_0 = input.LA(1);
			if ( (LA2_0==32) ) {
				alt2=1;
			}
			} finally {dbg.exitDecision(2);}

			switch (alt2) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\overture\\astCreator-github\\astCreator\\src\\main\\resources\\Astc.g:238:41: 'analysis' JAVANAME ';' !
					{
					dbg.location(238,41);
					string_literal11=(Token)match(input,32,FOLLOW_32_in_pkg482); 
					string_literal11_tree = (Object)adaptor.create(string_literal11);
					adaptor.addChild(root_0, string_literal11_tree);
					dbg.location(238,52);
					JAVANAME12=(Token)match(input,JAVANAME,FOLLOW_JAVANAME_in_pkg484); 
					JAVANAME12_tree = (Object)adaptor.create(JAVANAME12);
					adaptor.addChild(root_0, JAVANAME12_tree);
					dbg.location(238,64);
					char_literal13=(Token)match(input,28,FOLLOW_28_in_pkg486); 
					}
					break;

			}
			} finally {dbg.exitSubRule(2);}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(239, 2);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "pkg");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "pkg"


	public static class ast_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "ast"
	// C:\\overture\\astCreator-github\\astCreator\\src\\main\\resources\\Astc.g:241:1: ast : AST ^ ( ( production )* ) ;
	public final AstcParser.ast_return ast() throws  {
		AstcParser.ast_return retval = new AstcParser.ast_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token AST14=null;
		ParserRuleReturnScope production15 =null;

		Object AST14_tree=null;

		try { dbg.enterRule(getGrammarFileName(), "ast");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(241, 0);

		try {
			// C:\\overture\\astCreator-github\\astCreator\\src\\main\\resources\\Astc.g:242:3: ( AST ^ ( ( production )* ) )
			dbg.enterAlt(1);

			// C:\\overture\\astCreator-github\\astCreator\\src\\main\\resources\\Astc.g:242:5: AST ^ ( ( production )* )
			{
			root_0 = (Object)adaptor.nil();


			dbg.location(242,8);
			AST14=(Token)match(input,AST,FOLLOW_AST_in_ast505); 
			AST14_tree = (Object)adaptor.create(AST14);
			root_0 = (Object)adaptor.becomeRoot(AST14_tree, root_0);
			dbg.location(242,10);
			// C:\\overture\\astCreator-github\\astCreator\\src\\main\\resources\\Astc.g:242:10: ( ( production )* )
			dbg.enterAlt(1);

			// C:\\overture\\astCreator-github\\astCreator\\src\\main\\resources\\Astc.g:242:11: ( production )*
			{
			dbg.location(242,11);
			// C:\\overture\\astCreator-github\\astCreator\\src\\main\\resources\\Astc.g:242:11: ( production )*
			try { dbg.enterSubRule(3);

			loop3:
			while (true) {
				int alt3=2;
				try { dbg.enterDecision(3, decisionCanBacktrack[3]);

				int LA3_0 = input.LA(1);
				if ( (LA3_0==ID||LA3_0==20) ) {
					alt3=1;
				}

				} finally {dbg.exitDecision(3);}

				switch (alt3) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\overture\\astCreator-github\\astCreator\\src\\main\\resources\\Astc.g:242:12: production
					{
					dbg.location(242,12);
					pushFollow(FOLLOW_production_in_ast510);
					production15=production();
					state._fsp--;

					adaptor.addChild(root_0, production15.getTree());

					}
					break;

				default :
					break loop3;
				}
			}
			} finally {dbg.exitSubRule(3);}

			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(243, 2);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "ast");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "ast"


	public static class toks_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "toks"
	// C:\\overture\\astCreator-github\\astCreator\\src\\main\\resources\\Astc.g:245:1: toks : TOKENS ^ ( ( token )* ) ;
	public final AstcParser.toks_return toks() throws  {
		AstcParser.toks_return retval = new AstcParser.toks_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token TOKENS16=null;
		ParserRuleReturnScope token17 =null;

		Object TOKENS16_tree=null;

		try { dbg.enterRule(getGrammarFileName(), "toks");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(245, 0);

		try {
			// C:\\overture\\astCreator-github\\astCreator\\src\\main\\resources\\Astc.g:246:3: ( TOKENS ^ ( ( token )* ) )
			dbg.enterAlt(1);

			// C:\\overture\\astCreator-github\\astCreator\\src\\main\\resources\\Astc.g:246:5: TOKENS ^ ( ( token )* )
			{
			root_0 = (Object)adaptor.nil();


			dbg.location(246,11);
			TOKENS16=(Token)match(input,TOKENS,FOLLOW_TOKENS_in_toks528); 
			TOKENS16_tree = (Object)adaptor.create(TOKENS16);
			root_0 = (Object)adaptor.becomeRoot(TOKENS16_tree, root_0);
			dbg.location(246,13);
			// C:\\overture\\astCreator-github\\astCreator\\src\\main\\resources\\Astc.g:246:13: ( ( token )* )
			dbg.enterAlt(1);

			// C:\\overture\\astCreator-github\\astCreator\\src\\main\\resources\\Astc.g:246:14: ( token )*
			{
			dbg.location(246,14);
			// C:\\overture\\astCreator-github\\astCreator\\src\\main\\resources\\Astc.g:246:14: ( token )*
			try { dbg.enterSubRule(4);

			loop4:
			while (true) {
				int alt4=2;
				try { dbg.enterDecision(4, decisionCanBacktrack[4]);

				int LA4_0 = input.LA(1);
				if ( (LA4_0==ID) ) {
					alt4=1;
				}

				} finally {dbg.exitDecision(4);}

				switch (alt4) {
				case 1 :
					dbg.enterAlt(1);

					// C:\\overture\\astCreator-github\\astCreator\\src\\main\\resources\\Astc.g:246:15: token
					{
					dbg.location(246,15);
					pushFollow(FOLLOW_token_in_toks533);
					token17=token();
					state._fsp--;

					adaptor.addChild(root_0, token17.getTree());

					}
					break;

				default :
					break loop4;
				}
			}
			} finally {dbg.exitSubRule(4);}

			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		dbg.location(247, 2);

		}
		finally {
			dbg.exitRule(getGrammarFileName(), "toks");
			decRuleLevel();
			if ( getRuleLevel()==0 ) {dbg.terminate();}
		}

		return retval;
	}
	// $ANTLR end "toks"


	public static class aspectdcl_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "aspectdcl"
	// C:\\overture\\astCreator-github\\astCreator\\src\\main\\resources\\Astc.g:249:1: aspectdcl : ASPECT_DCL ^ ( aspectdcla ';' !)* ;
	public final AstcParser.aspectdcl_return aspectdcl() throws  {
		AstcParser.aspectdcl_return retval = new AstcParser.aspectdcl_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token ASPECT_DCL18=null;
		Token char_literal20=null;
		ParserRuleReturnScope aspectdcla19 =null;

		Object ASPECT_DCL18_tree=null;
		Object char_literal20_tree=null;

		try { dbg.enterRule(getGrammarFileName(), "aspectdcl");
		if ( getRuleLevel()==0 ) {dbg.commence();}
		incRuleLevel();
		dbg.location(249, 0);

		try {
			// C:\\overture\\astCreator-github\\astCreator\\src\\main\\resources\\Astc.g:250:3: ( ASPECT_DCL ^ ( aspectdcla ';' !)* )
			dbg.enterAlt(1);

			// C:\\overture\\astCreator-github\\astCreator\\src\\main\\resources\\Astc.g:250:5: ASPECT_DCL ^ ( aspectdcla ';' !)*
			{
			root_0 = (Object)adaptor.nil();


			dbg.location(250,15);
			ASPECT_DCL18=(Token)match(input,ASPECT_DCL,FOLLOW_ASPECT_DCL_in_aspectdcl551); 
			ASPECT_DCL18_tree = (Object)adaptor.create(ASPECT_DCL18);
			root_0 = (Object)adaptor.becomeRoot(ASPECT_DCL18_tree, root_0);
			dbg.location(250,17);
			// C:\\overture\\astCreator-github\\astCreator\\src\\main\\resources\\Astc.g:250:17: ( aspectdcla ';' !)*
			try { dbg.enterSubRule(5);

			loop5:
			while (true) {
				int alt5=2;
				try { dbg.enterDecision(5, decisionCanBacktrack[5]);

				int LA5_0 = input.LA(1);
				if ( (LA5_0==21) ) {
					alt5=1;
				}

				} finally {dbg.exitDecision(5);}

				switch (alt5) {
				case 1 :
					dbg.enterAlt(1);
